# ai-doc-cli

./: README.md  pyproject.toml
ai_doc/: main.py
ai_document_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
